release-note/1.6.2-beta3/ml_IN.md
## [1.6.2-beta3]

### Fixed
- മീഡിയ ഡയറക്ടറി ആക്സസ് ചെയ്യാൻ കഴിയാത്ത ഒരു പ്രശ്നം പരിഹരിച്ചു
- ആപ്പ് മൈഗ്രേഷൻ ശരിയായി പ്രവർത്തിക്കാൻ കഴിയാത്ത ഒരു പ്രശ്നം പരിഹരിച്ചു
- സ്റ്റാർട്ടപ്പിൽ casaos-every-boot ഒരു പിശക് റിപ്പോർട്ട് ചെയ്ത ഒരു പ്രശ്നം പരിഹരിച്ചു
- പ്രാദേശിക ഡൊമെയ്ൻ നാമത്തിലൂടെ സിമ ആക്‌സസ് ചെയ്യാൻ കഴിയാത്ത ഒരു പ്രശ്‌നം പരിഹരിച്ചു

### Security
- സന്ദേശമയയ്‌ക്കൽ സേവനത്തിലെ ഉയർന്ന അപകടസാധ്യതയുള്ള സുരക്ഷാ പ്രശ്‌നം പരിഹരിച്ചു, സിസ്റ്റം ആശയവിനിമയ സുരക്ഷ മെച്ചപ്പെടുത്തുന്നു

## [1.6.2-beta2]

### Fixed
- ചില സിസ്റ്റം ഡയറക്‌ടറികൾ അസാധുവായ പാതകളായി തെറ്റായി തിരിച്ചറിഞ്ഞ ഒരു പ്രശ്നം പരിഹരിച്ചു

### Optimized
- നിർദ്ദിഷ്ട സാഹചര്യങ്ങളിൽ ക്ലൗഡ് ഡ്രൈവ് ഇനീഷ്യലൈസേഷൻ കോൺഫിഗറേഷൻ പ്രോസസ് ഒപ്റ്റിമൈസ് ചെയ്തു, മന്ദഗതിയിലുള്ള സമാരംഭം മൂലമുണ്ടാകുന്ന ഫയലുകൾ ലോഡുചെയ്യുന്ന പ്രശ്നങ്ങൾ പരിഹരിക്കുന്നു

## [1.6.2-beta1]

### Security
- അക്കൗണ്ട് മാനേജ്‌മെൻ്റ് മൊഡ്യൂളിലെ ഉയർന്ന അപകടസാധ്യതയുള്ള സുരക്ഷാ പ്രശ്‌നം അടിയന്തിരമായി പരിഹരിച്ചു, അഡ്മിനിസ്ട്രേറ്റർ പ്രവർത്തനങ്ങളുടെ സുരക്ഷ കൂടുതൽ മെച്ചപ്പെടുത്തുന്നു
- ഫയൽ സേവനത്തിലെ ഉയർന്ന അപകടസാധ്യതയുള്ള സുരക്ഷാ പ്രശ്നം അടിയന്തിരമായി പരിഹരിച്ചു, ഫയൽ ആക്‌സസ്സിൻ്റെയും പ്രവർത്തനങ്ങളുടെയും സുരക്ഷ മെച്ചപ്പെടുത്തുന്നു

### New
- ഫയലുകൾ ആപ്പിനായി ഡാർക്ക് മോഡ് ചേർത്തു
- അലിബാബ ക്ലൗഡ് ഡ്രൈവ് ഇൻ്റഗ്രേഷൻ പിന്തുണ ചേർത്തു
- ലിനക്സ് കേർണൽ 6.18.9 ലേക്ക് അപ്ഡേറ്റ് ചെയ്തു
- NVIDIA 470 / 580 / Open Kernel Module, Intel Xe / Battlemage, Realtek RTW88 / RTL8127, Intel / MediaTek / AIC8800 വയർലെസ് ഉപകരണങ്ങൾ, Cirrus Logic ഓഡിയോ ഉപകരണങ്ങൾ എന്നിവയ്‌ക്കായി ഡ്രൈവർ പിന്തുണ ചേർത്തു, കൂടാതെ ഡ്രൈവർ മെക്കാനിസവുമായി പൊരുത്തപ്പെടുന്ന ഒരു NVIDIA ഡ്രൈവർ പതിപ്പ് സ്വയമേവ പൊരുത്തപ്പെടുത്തുന്ന ഹാർഡ് വേർഷൻ ചേർത്തു.

### Fixed
- കണക്ഷൻ പ്രശ്നങ്ങൾക്ക് കാരണമാകുന്ന OneDrive കീ കാലഹരണപ്പെടൽ പരിഹരിച്ചു, അടിസ്ഥാന സംയോജന ലഭ്യത പുനഃസ്ഥാപിച്ചു, കൂടാതെ കീ അപ്‌ഡേറ്റ് സംവിധാനം ഒപ്റ്റിമൈസ് ചെയ്തു
- ബാക്കപ്പ് ടാസ്‌ക്കുകൾ ശരിയായി പ്രവർത്തിക്കാൻ കഴിയുമെന്ന് ഉറപ്പാക്കിക്കൊണ്ട്, Collabora സെർവർ ആപ്പ് ബാക്കപ്പുകൾ ബ്ലോക്ക് ചെയ്‌ത പ്രശ്‌നം പരിഹരിച്ചു
- ഒന്നിലധികം USB സ്റ്റോറേജ് ഡിവൈസുകൾക്ക് സ്റ്റാർട്ടപ്പിൽ ഒരേ മൗണ്ട് പോയിൻ്റ് നൽകാവുന്ന ഒരു പ്രശ്നം പരിഹരിച്ചു
- USB മൗണ്ട് പോയിൻ്റുകൾ വൈരുദ്ധ്യമുള്ളപ്പോൾ ലെഗസി `-ഡിവൈസ്-നെയിം` സഫിക്സുകൾ സൃഷ്ടിക്കപ്പെട്ട ഒരു പ്രശ്നം പരിഹരിച്ചു
- സിംഗിൾ-പാർട്ടീഷൻ ഡിസ്കിൽ നിന്ന് സൃഷ്ടിച്ച സ്റ്റോറേജ് ഉപയോക്താവ് വ്യക്തമാക്കിയ പേര് മൗണ്ട് പോയിൻ്റായി ഉപയോഗിക്കാത്ത ഒരു പ്രശ്നം പരിഹരിച്ചു
- ഒരേ സീരിയൽ നമ്പറുള്ള ഡിസ്കുകളിൽ നിന്ന് ഒരു റെയ്ഡ് അറേ സൃഷ്ടിക്കുമ്പോൾ റീബൂട്ടിന് ശേഷം സ്ഥിരമായ റെയ്ഡ് ഡീഗ്രേഡേഷൻ
- പൊരുത്തമില്ലാത്ത റൺടൈം ഉപകരണ നാമ ഫോർമാറ്റുകൾ മൂലമുണ്ടാകുന്ന RAID സ്റ്റാർട്ടപ്പ് പരിശോധനകളിലെ തെറ്റായ പോസിറ്റീവുകൾ പരിഹരിച്ചു

### Optimized
- ഇറക്കുമതി, മൈഗ്രേഷൻ, എൻക്രിപ്ഷൻ, കോപ്പി, കട്ട് എന്നിവ പോലുള്ള ഒപ്റ്റിമൈസ് ചെയ്ത ഹൈ-ഫ്രീക്വൻസി ഫയൽ ഓപ്പറേഷൻ വർക്ക്ഫ്ലോകൾ
- ഒപ്‌റ്റിമൈസ് ചെയ്‌ത ക്ലൗഡ് ഡ്രൈവ് അപ്‌ലോഡ് സ്റ്റാറ്റസ് ഡിസ്‌പ്ലേ, നിലവിലെ പുരോഗതി, പൂർത്തീകരണ നില, പരാജയ കാരണങ്ങൾ എന്നിവ ഉപയോക്താക്കൾക്ക് മനസ്സിലാക്കാൻ ഇത് വ്യക്തമാക്കുന്നു

### Tips
- നിങ്ങൾക്ക് എന്തെങ്കിലും സോഫ്‌റ്റ്‌വെയർ പ്രശ്‌നങ്ങൾ നേരിടുകയാണെങ്കിൽ, 43,000-ലധികം Zima അംഗങ്ങളുമായി കണക്റ്റുചെയ്യാനും പിന്തുണ നേടാനും ഞങ്ങളുടെ ഡിസ്‌കോർഡ് കമ്മ്യൂണിറ്റിയിൽ ചേരാൻ മടിക്കേണ്ടതില്ല!
- <a href="https://zimaboard.com/discord" target="_blank" style="color:blue">https://zimaboard.com/discord</a>
